<resources>
    <string name="app_name">Marvel</string>
    <string name="series">Series</string>
    <string name="comics">Comics</string>
    <string name="character">Character</string>
    <string name="no_results">No Results</string>
    <string name="series_title">Series Title</string>
    <string name="text_view_description">description</string>
    <string name="home_newest_series_title">Latest series</string>
    <string name="suggest_for_you">Suggested for you</string>
    <string name="more">Show more</string>
    <string name="try_again">Try again</string>
    <string name="the_second">The second volume containing the Hulk\'s early adventures with appearances by the Sub-Mariner, the Mandarin, Ka-Zar and Nick Fury</string>
    <string name="creators">Creators</string>
    <string name="_1969_12_31">1969-12-31</string>
    <string name="stories">Stories</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="comic_not_available">comic not available</string>
</resources>