<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
        name="viewModel"
        type="com.chocolatecake.marvel.ui.search.SearchViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_search"
            style="@style/TextStyle.BodyMedium.SearchBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16sp"
            android:text="@={viewModel.searchQuery}"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/layout_filters"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:scrollbars="none"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="68dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/seriesChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/series"
                    tools:text="series" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/comicsChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/comics"
                    tools:text="comics" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/characterChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/character"
                    tools:text="character" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>