<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listener"
            type="com.chocolatecake.marvel.ui.home.adapter.HomeListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_small">

        <TextView
            android:id="@+id/series_title_text_view"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:fontFamily="@font/roboto"
            android:textColor="@color/on_background_87"
            android:text="@string/home_newest_series_title"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view_series"
            app:layout_constraintStart_toStartOf="@id/recycler_view_series"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_more"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:fontFamily="@font/roboto"
            android:text="@string/more"
            android:onClick="@{() -> listener.onClickMoreSeries()}"
            android:textColor="@color/on_background_60"
            app:layout_constraintBottom_toBottomOf="@+id/series_title_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/series_title_text_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/spacing_custom"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/series_title_text_view"
            tools:listitem="@layout/home_item_series" />

        <TextView
            android:id="@+id/title_comics"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:text="@string/suggest_for_you"
            android:layout_marginTop="@dimen/spacing_medium"
            android:fontFamily="@font/roboto"
            android:textColor="@color/on_background_87"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_series" />

        <TextView
            android:id="@+id/text_view_more_comics"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:fontFamily="@font/roboto"
            android:text="@string/more"
            android:onClick="@{() -> listener.onClickMoreComics()}"
            android:textColor="@color/on_background_60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_comics" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>