<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.chocolatecake.marvel.ui.storiesDetails.StoriesDetailsViewModel" />

        <variable
            name="item"
            type="com.chocolatecake.marvel.data.model.StoryResult" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@{viewModel.story.toData().formattedDate}"
                android:textSize="@dimen/text_semi_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_back"
                tools:text="12/10/2022" />

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:text="@{viewModel.story.toData().title}"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_date" />

            <TextView
                android:id="@+id/text_view_creators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/creators"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_creators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:orientation="horizontal"
                app:items="@{viewModel.creators.toData()}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_creators"
                tools:listitem="@layout/item_creator" />

            <TextView
                android:id="@+id/text_view_comics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/comics"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_creators" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_comics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:items="@{viewModel.comics.toData()}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_comics"
                tools:listitem="@layout/comic_item" />

            <TextView
                android:id="@+id/text_view_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/series"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_comics" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_series"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:orientation="horizontal"
                app:items="@{viewModel.series.toData()}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_series"
                tools:listitem="@layout/series_item" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:showWhenLoading="@{viewModel.story}" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:constraint_referenced_ids="text_view_comics,recycler_view_comics"
                app:isVisible="@{viewModel.comics.toData().size()!=0}" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:constraint_referenced_ids="text_view_creators,recycler_view_creators"
                app:isVisible="@{viewModel.creators.toData().size()!=0}" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:constraint_referenced_ids="text_view_series,recycler_view_series"
                app:isVisible="@{viewModel.series.toData().size() !=0}" />

            <include
                android:id="@+id/button_back"
                layout="@layout/layout_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_medium"
                android:background="@drawable/icon_back_background"
                android:onClick="@{()-> viewModel.navigateBack()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
